# tractor

./: .gitignore  README.md  docker-compose.yaml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: audesse_flex_case_g.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
audess_flex_case_g/: .project
audess_flex_case_g/src/: heart.c  main.c
audesse_flex_case_g/: .cproject  .project  README.md
audesse_flex_case_g/Debug_FLASH/: .gitignore  audesse_flex_case_g.args  makefile
audesse_flex_case_g/Debug_FLASH/src/: heart.args  subdir.mk
audesse_flex_case_g/include/: ARMCM7.h  ARMCM7_DP.h  ARMCM7_SP.h  S32K344.h  cmsis_compiler.h  cmsis_gcc.h  core_cm7.h  heart.h  typedefs.h
audesse_flex_case_g/src/: heart.c  main.c
display/: Dockerfile  package-lock.json  package.json
firmware/: meson.build
firmware/hal/: meson.build
firmware/src/: meson.build  processor_consts.h
firmware/subprojects/: .gitignore
firmware/tests/: meson.build
scripts/: README.md
scripts/web-client-generator/: generator.py
server/: Dockerfile  pyproject.toml
server/app/: main.py  openapi.json
stmNucleoECU/: README.md
stmNucleoECU/Linker/: STM32F072RBTX_FLASH.ld
(+45 files in other folders)
